# LillUgsi

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
shaders/: debug.glsl.frag  debug.glsl.vert  frag.glsl.frag  pbr.glsl.frag  pbr.glsl.vert  terrain.glsl.frag  terrain.glsl.vert  vert.glsl.vert  wireframe.glsl.frag  wireframe.glsl.vert
src/: main.cpp
src/core/: application.cpp  application.h
src/planet/: datasettingvisitor.cpp  datasettingvisitor.h  face.cpp  face.h  heightdifferencevisitor.h  main.cpp  noiseterrainvisitor.cpp  noiseterrainvisitor.h  planetdata.cpp  planetdata.h  planetformater.h  planetgenerator.cpp  planetgenerator.h  terraingeneratorvisitor.cpp  terraingeneratorvisitor.h  vector3.cpp  vector3.h  vertexdata.cpp  vertexdata.h  vertexvisitor.h
src/rendering/: buffercache.cpp  buffercache.h  buffermanager.cpp  buffermanager.h  camera.cpp  camera.h  cubemesh.cpp  cubemesh.h  custommaterial.cpp  custommaterial.h  debugmaterial.cpp  debugmaterial.h  editorcamera.cpp  editorcamera.h  icospheremesh.cpp  icospheremesh.h  light.cpp  light.h  lightmanager.cpp  lightmanager.h  material.cpp  material.h  materialmanager.cpp  materialmanager.h  materialtype.h  mesh.h  meshmanager.cpp  meshmanager.h  meshmananger.cpp  meshmananger.h  modelmesh.h  orbitcamera.cpp  orbitcamera.h  pbrmaterial.cpp  pbrmaterial.h  pipelineconfig.cpp  pipelineconfig.h  pipelinefactory.cpp  pipelinefactory.h  renderer.cpp  (+16 more)
src/rendering/models/: embeddedtextureextractor.cpp  embeddedtextureextractor.h  gltfmodelloader.cpp  gltfmodelloader.h  materialextractor.cpp  materialextractor.h  materialparametermapper.cpp  materialparametermapper.h  meshextractor.cpp  meshextractor.h  modeldata.h  modelloader.h  modelmanager.cpp  modelmanager.h  scenegraphconstructor.cpp  scenegraphconstructor.h  textureloadingpipeline.cpp  textureloadingpipeline.h
src/scene/: boundingbox.cpp  boundingbox.h  frustum.cpp  frustum.h  scene.cpp  scene.h  scenenode.cpp  scenenode.h  scenetypes.cpp  scenetypes.h
src/vulkan/: buffer.h  commandbuffermanager.cpp  commandbuffermanager.h  depthbuffer.cpp  depthbuffer.h  framebuffermanager.cpp  framebuffermanager.h  indexbuffer.h  pipelineconfig.cpp  pipelineconfig.h  pipelinemanager.cpp  pipelinemanager.h  resourcemanager.cpp  resourcemanager.h  shadermodule.cpp  shadermodule.h  shaderprogram.cpp  shaderprogram.h  vertexbuffer.h  vulkanbuffer.cpp  vulkanbuffer.h  vulkancontext.cpp  vulkancontext.h  vulkandevice.cpp  vulkandevice.h  vulkanexception.h  vulkanformatters.h  vulkanhandle.h  vulkaninstance.cpp  vulkaninstance.h  vulkanswapchain.cpp  vulkanswapchain.h  vulkanutils.h  vulkanwrappers.cpp  vulkanwrappers.h
